--- a/es.elv.nwnx2.jvm.events.combatlog/build.properties
+++ b/es.elv.nwnx2.jvm.events.combatlog/build.properties
@@ -1,5 +1,5 @@
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               OSGI-INF/combatlogprovider.xml
+               OSGI-INF/
 source.. = src/
