--- a/es.elv.nwnx2.jvm.hierarchy.webconsole/build.properties
+++ b/es.elv.nwnx2.jvm.hierarchy.webconsole/build.properties
@@ -1,6 +1,5 @@
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               OSGI-INF/webconsoleimpl.xml,\
-               OSGI-INF/metatype/
+               OSGI-INF/
 source.. = src/
