--- a/es.elv.nwnx2.jvm.hierarchy/build.properties
+++ b/es.elv.nwnx2.jvm.hierarchy/build.properties
@@ -1,9 +1,5 @@
+output.. = bin/
 bin.includes = META-INF/,\
-               bin/,\
                .,\
-               OSGI-INF/,\
-               OSGI-INF/hierarchy.xml,\
-               OSGI-INF/objecthandler.xml,\
-               OSGI-INF/effecthandler.xml,\
-               OSGI-INF/itempropertyhandler.xml
+               OSGI-INF/
 source.. = src/
