--- a/es.elv.nwnx2.jvm.nwnx.events/build.properties
+++ b/es.elv.nwnx2.jvm.nwnx.events/build.properties
@@ -1,5 +1,5 @@
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               OSGI-INF/events.xml
+               OSGI-INF/
 source.. = src/
